added Header and Photos

--- a/styles.css
+++ b/styles.css
@@ -3,12 +3,9 @@ body{
   background-color: black !important;
 }
 
-.img{
-      justify-content: center;
-}
 
 p{
-  color: whitesmoke;
+  color: white;
 }
 
 h1{
@@ -29,3 +26,28 @@ h3{
 .instagram{
   padding-right: 10px;
 }
+.nav-pills {
+    --bs-nav-pills-border-radius: var(--bs-border-radius);
+    --bs-nav-pills-link-active-color: black !important;
+    --bs-nav-pills-link-active-bg: white !important;
+}
+.nav {
+    --bs-nav-link-padding-x: 1rem;
+    --bs-nav-link-padding-y: 0.5rem;
+    --bs-nav-link-font-weight: ;
+    --bs-nav-link-color: white !important;
+    --bs-nav-link-hover-color: gray !important;
+    --bs-nav-link-disabled-color: white !important;
+    display: flex
+;
+    flex-wrap: wrap;
+    padding-left: 0;
+    margin-bottom: 0;
+    list-style: none;
+}
+
+.containerheader{
+  margin-bottom: 0px;
+  padding-bottom: 0px;
+}
+
